code cleanup: pmd warnings for jdk 1.5+ code