@@ -168,7 +168,7 @@ public class FileList
         case 0:
           return filevector.get(row).getFile().getName();
         case 1:
-          return new Integer(filevector.get(row).getPages());
+          return Integer.valueOf(filevector.get(row).getPages());
         case 2:
           return filevector.get(row).getFile().getParent();
       }
